# Python

./: .coverage  .coveragerc  .gitignore  CONTRIBUTING.md  DayOfTheWeek.py  FRONTEND_SETUP.md  FRONTEND_STATUS.md  Harness.py  MoonPhase.py  MoonPositionFromEarthLocation.py  MoonRiseAndSet.py  OPTIMIZATION_NOTES.md  PromptDate.py  PromptLocation.py  README.md  SolarSystemAnimationGL.py  SunAndMoonAnimation.py  SunAndMoonAnimationOpenGL.py  SunAndMoonPlot.py  SunPositionFromEarthLocation.py  SunRiseAndSet.py  bandit-report.json  benchmark_batch_api.py  benchmark_quick.py  coverage.xml  pyproject.toml  requirements.txt  sun_position_demo.html  test_batch_output.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: __init__.py  main.py  models.py  routes.py
api/services/: __init__.py  batch_earth_observations.py  dates.py  moon.py  moon_phase.py  sun.py
astronomy_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.production  .env.production.example  .gitignore  ISSUE_13_ANALYSIS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/coverage/: coverage-final.json  index.html
frontend/coverage/composables/: index.html  useAstronomyData.ts.html
frontend/coverage/services/: api.ts.html  config.ts.html  index.html
frontend/coverage/src/: App.vue.html  index.html
frontend/coverage/src/components/: AstronomyScene.vue.html  index.html
frontend/coverage/src/composables/: index.html  useAstronomyData.ts.html
frontend/coverage/src/services/: api.ts.html  config.ts.html  index.html
frontend/coverage/src/three/: index.html  scene.ts.html
frontend/coverage/three/: index.html  scene.ts.html
frontend/coverage/three/objects/: Earth.ts.html  Moon.ts.html  Sun.ts.html  index.html
frontend/src/: App.vue  i18n.ts  main.ts  shims-vue.d.ts  test-setup.ts
frontend/src/assets/: global-map-fix.css
frontend/src/components/: AstronomyScene.test.ts  AstronomyScene.vue  BaseMap.vue  DateRangePicker.spec.ts  DateRangePicker.vue  MoonPhaseIndicator.vue  accessibility.test.ts
frontend/src/composables/: useAstronomyData.test.ts  useAstronomyData.ts  useToast.ts
frontend/src/locales/: en.json
frontend/src/services/: api.test.ts  api.ts  config.ts
frontend/src/three/: scene.test.ts  scene.ts
frontend/src/three/objects/: Earth.test.ts  Earth.ts  Moon.test.ts  Moon.ts  Sun.ts  (+1 more)
frontend/src/types/: api.types.ts
frontend/tests/: accessibility-manual.md
frontend/tests/e2e/: README.md  astronomy-scene.spec.ts
tests/: test_DayOfTheWeek.py  test_MoonPhase.py  test_MoonRiseAndSet.py  test_SunRiseAndSet.py  test_api_batch_earth_observations.py  test_api_dates.py  test_api_moon.py  test_api_moon_phase.py  test_api_routes.py  test_api_sun.py  test_moon_rise_set_helpers.py
(+4 files in other folders)
