[build-system]
# Security: wheel CVE-2026-24049 fixed in 0.46.2
# Security: pip CVE-2026-3219 fixed in 26.1
requires = ["setuptools>=82.0.1", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "astronomy-tools"
version = "0.1.0"
description = "Astronomy calculation tools and API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "astropy",
    "numpy",
    "matplotlib",
    "PyOpenGL",
    "PyOpenGL-accelerate",
    "fastapi",
    "uvicorn[standard]",
    # Security: CVE-2026-25990, CVE-2026-40192 fixed in 12.2.0
    "pillow>=12.2.0",
    # Security: CVE-2026-4539 fixed in 2.20.0
    "pygments>=2.20.0",
    # Security: CVE-2026-28684 fixed in 1.2.2
    "python-dotenv>=1.2.2",
    # Security: CVE-2026-25645 fixed in 2.33.0
    "requests>=2.33.0",
]

[project.optional-dependencies]
dev = [
    # Security: CVE-2025-71176 fixed in 9.0.3
    "pytest>=9.0.3",
    "pytest-cov",
    "httpx",
]

[tool.setuptools]
packages = ["api", "api.services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/htmlcov/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
